--- a/package.json
+++ b/package.json
@@ -11,10 +11,23 @@
     "server": "json-server --watch src/jobs.json --port 8000"
   },
   "dependencies": {
+    "@chakra-ui/react": "^3.0.2",
+    "@emotion/react": "^11.13.3",
+    "@tanstack/react-query": "^5.59.16",
+    "connectkit": "^1.8.2",
+    "dotenv": "^16.4.5",
+    "ethers": "^6.13.4",
+    "moralis-v1": "^1.13.0",
+    "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
-    "react-router-dom": "^6.26.1"
+    "react-moralis": "^1.4.2",
+    "react-router-dom": "^6.27.0",
+    "react-spinners": "^0.14.1",
+    "react-toastify": "^10.0.6",
+    "viem": "^2.21.35",
+    "wagmi": "^2.12.25"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
